added files appspec-tsconfig, fixed errors raised by shiva

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -9,8 +9,8 @@
         </button>
       </div>
       <div class="border-bottom border-white row pb-3 mb-3">
-        <div class="col-4 d-none d-lg-block text-center mt-3">
-          <img src="../../assets/images/doctor-md-img.png" alt="profile" class="rounded-circle w-100"/>
+        <div class="col-4 d-none d-lg-block text-center mt-4">
+          <img src="../../assets/images/profileplaceholder.png.jpg" alt="profile" class="rounded-circle w-100"/>
         </div>
         <div class="col-8 d-none d-lg-block text mt-4">
          <span class="row ml-2 text-light"> welcome</span>
