--- a/src/app/dashboard/submit-bid/submit-bid.component.html
+++ b/src/app/dashboard/submit-bid/submit-bid.component.html
@@ -3,16 +3,16 @@
   <div class="container-fluid no-padding">
     <div class="row mb-5">
       <div class="col-md-12 px-0 item">
-        <img src="assets/images/hospitalHeader.png" alt="hospitalHeader" class="w-100" />
+        <img src="assets/images/hospitalHeader.png" alt="hospitalHeader" class="w-100 titleImage" />
         <div class="carousel-caption">
           <h1 class="d-none d-sm-block pb-lg-4 headerText header">Please submit your bids here</h1>
         </div>
       </div>
     </div>
 
-    <div class="mk-form__form pb-5">
+    <div class="mk-form__form pb-3">
       <form [formGroup]="submitbidForm">
-        <div class="form-group formStyle  p-5 mb-5 firstCard">
+        <div class="form-group formStyle  p-5 mb-3 firstCard">
           <label for="state">Hospital Details</label>
           <p> Name:<span class="ml-3">{{data.requestorName}}</span></p>
           <p> Organisation:<span class="ml-3">{{data.hospitalNgo}}</span></p>
@@ -47,7 +47,7 @@
         </div> -->
 
         <div formGroupName="ppes">
-          <div class="form-group formStyle p-5 mt-md-5 mb-5">
+          <div class="form-group formStyle p-5 mt-md-3 mb-3">
             <label class="mk-required" for="PPE">Submit Bid</label>
             <div *ngFor="let ppe of submitbidForm.controls.ppes['controls']; let i = index " [formGroupName]="i">
               <div class="row" >
@@ -85,7 +85,7 @@
           </div>
         </div>
 
-        <div class="form-group formStyle p-5 mt-md-5 mb-5">
+        <div class="form-group formStyle p-5 mt-md-3 mb-3">
           <label class="mk-required" for="homemade PPE">Do you need Logistics Support?</label>
           <div class="px-3 px-md-4 mt-md-5 mt-2">
             <label class="mk-required" for="homeMade_true" class="mk-radio-yes mk-radio-container" >
