--- a/src/app/haveppe/haveppe.component.html
+++ b/src/app/haveppe/haveppe.component.html
@@ -3,7 +3,7 @@
   <div class = "container-fluid no-padding">
     <div class="row mb-5">
       <div class="col-md-12 px-0 item">
-        <img src="assets/images/hospitalHeader.png" alt="hospitalHeader" class="w-100" />
+        <img src="assets/images/hospitalHeader.png" alt="hospitalHeader" class="w-100 titleImage" />
         <div class="carousel-caption">
           <h1 class="d-none d-sm-block pb-lg-4 headerText header">Sign Up</h1>
         </div>
