--- a/src/app/haveppe/haveppe.component.scss
+++ b/src/app/haveppe/haveppe.component.scss
@@ -50,3 +50,15 @@
    transform-style: preserve-3d;
  }
  }
+
+ .firstCard {
+  border-top: 10px solid $btn-primary;
+    margin-top: 100px;
+  
+}
+
+.titleImage{
+  @include media-breakpoint-up(lg){
+    height: 250px;
+  }
+}
