CICD pipeline made column certifiedppe dashboard

--- a/src/app/about-us/about-us.component.html
+++ b/src/app/about-us/about-us.component.html
@@ -1,10 +1,10 @@
 <div class="d-flex flex-column about-us">
   <div class="d-flex mb-5 page-header">
-    <div class="w-100 px-0 position-relative">
+    <div class="w-100 px-0 position-relative item">
       <img
         src="assets/images/about-us-page-header.png"
         alt="About us"
-        class="w-100"
+        class="w-100 titleImage"
       />
       <div class="carousel-caption">
         <h1 class="d-none d-sm-block pb-lg-4 headerText header">About Us</h1>
