added latest updates component

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -77,7 +77,7 @@
 <ncov-personal-details></ncov-personal-details>
 </div>
 <div class="tab-pane fade" id="notifications" role="tabpanel" aria-labelledby="notifications-tab">
-  Coming Soon!
+  <ncov-request-history></ncov-request-history>
   </div>
 <!-- <div class="tab-pane fade" id="requesthistory" role="tabpanel" aria-labelledby="contact-tab">
 <h2>Request History</h2>
