--- a/src/app/homepage/demands-dashboard/demands-dashboard.component.html
+++ b/src/app/homepage/demands-dashboard/demands-dashboard.component.html
@@ -12,7 +12,7 @@
   </div>
   <div class = "row mt-2 mt-lg-5 mb-2 mb-lg-5">
       <div class="col-lg-4 col-md-6 col-12 d-flex align-items-stretch justify-content-center" *ngFor = "let row of tableData">
-      <div class="card mx-3 mb-4 demands-dashboard__card demands-dashboard__heartbeat">
+      <div class="card mx-3 mb-4 demands-dashboard__card">
         <div class="card-header demands-dashboard__cardHeading"><h5 class="text-center">{{row.requestorName}} ({{row.hospitalNgo}})</h5></div>
         <div class="card-body">
           <div class="row">
